--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
 
 <div class="buttons">
     <div class="button"><a href="index.jsp">Add New Car Record</a></div>
-    <div class="button"><a href="admin.jsp">Check Car Record</a></div>
+    <div class="button"><a href="https://farmandavda.github.io/Car-managment-System/admin.jsp">Check Car Record</a></div>
     <div class="button"><a href="">Get Car Details</a></div>
     <div class="button"><a href="">Exit</a></div>
 </div>
